# Standalone crate — parent `teesql` Cargo workspace lists this path under
# its `exclude` array (matching the pattern used by all other open-source/*
# crates). It can still be consumed as a path dependency from the workspace.

[package]
name = "sqlx-ra-tls"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "sqlx::postgres driver extension with RA-TLS attestation verification for dstack TEE databases"
repository = "https://github.com/teesql/sqlx-ra-tls"
homepage = "https://github.com/teesql/sqlx-ra-tls"
readme = "README.md"
keywords = ["tee", "tdx", "ra-tls", "postgres", "sqlx"]
categories = ["database", "cryptography"]

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
tokio = { version = "1", default-features = false, features = ["net", "io-util", "rt", "macros", "time", "sync"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
async-trait = "0.1"
thiserror = "2"
x509-parser = "0.18"
# ra-tls-parse is not yet on crates.io; pull from the adjacent submodule.
# Switch to `version = "0.1"` from crates.io once published.
ra-tls-parse = { version = "0.1", path = "../ra-tls-parse" }
dstack-sdk = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "10"
base64 = "0.22"
hex = "0.4"
parity-scale-codec = { version = "3", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
url = "2"
webpki-roots = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
rcgen = "0.13"

[features]
default = []
# Enable tests that require a running dstack simulator or real sidecar.
live-test = []
